prodMetadata/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CnP_PaaS__C%26P Online</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Won%21</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Won%21</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Foundation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Won%21</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Goal</fullName>
        <description>To Register Goal numbers, both Baseline and Reach</description>
        <isActive>true</isActive>
        <values>
            <fullName>Base Goal</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Reach Amount</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>High Likelihood of Gift</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prior Relationship or Gift</fullName>
        </values>
        <values>
            <fullName>Proposal Received Lukewarm</fullName>
        </values>
        <values>
            <fullName>Proposal Received Positive</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
        <values>
            <fullName>Written Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>StrategicPartnership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Won%21</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>stayclassy__Default Sales Process</fullName>
        <description>Default Sales Process used by the Classy integration</description>
        <isActive>true</isActive>
    </businessProcesses>
    <fields>
        <fullName>Actual_Goal__c</fullName>
        <description>Default is Actual, Goal is used for projected revenue and reach goals, so we can compare actuals to goals</description>
        <inlineHelpText>Default is Actual, Goal is used for projected revenue and reach goals, so we can compare actuals to goals</inlineHelpText>
        <label>Actual / Goal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Goal</fullName>
                </value>
                <value>
                    <fullName>Aspirational Goal</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>In-Kind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Projected__c</fullName>
        <formula>IF(ISPICKVAL(Actual_Goal__c,&apos;Goal&apos;),&apos;Goal&apos;,
    IF(AND(ISPICKVAL(Actual_Goal__c,&apos;Actual&apos;),IsWon),&apos;Actual&apos;,
        IF(AND(ISPICKVAL(Actual_Goal__c,&apos;Actual&apos;),NOT(IsWon)),&apos;Projected&apos;,null)))</formula>
        <label>Actual/Projected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not publicly acknowledge this donation</description>
        <inlineHelpText>Do not publicly acknowledge this donation</inlineHelpText>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_Date__c</fullName>
        <description>Date of Ask or proposal Submission, or projected ask date for donations in stage &quot;Prospecting&quot;</description>
        <inlineHelpText>Date of Ask or proposal Submission, or projected ask date for donations in stage &quot;Prospecting&quot;</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auction_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check for auction donation</description>
        <inlineHelpText>Check for auction donation</inlineHelpText>
        <label>Auction Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bracket__c</fullName>
        <formula>IF(Amount &lt; 100, &quot;0010-0099&quot;, IF(Amount &lt; 500, &quot;0100-499&quot;, IF(Amount &lt; 1000, &quot;0500-0999&quot;, IF(Amount &lt; 5000, &quot;1000-4999&quot;, &quot;5000+&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bracket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_P_Contact_Id__c</fullName>
        <formula>CASESAFEID(CnP_PaaS__Contact__c)</formula>
        <label>C&amp;P Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>YEAR( CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Category__c</fullName>
        <description>The Campaign Category that we will use to divide the revenue pie independently from source.</description>
        <inlineHelpText>The Campaign Category that we will use to divide the revenue pie independently from source.</inlineHelpText>
        <label>Campaign Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Cause</fullName>
                </value>
                <value>
                    <fullName>CFC</fullName>
                </value>
                <value>
                    <fullName>Circle of Valor Direct Response</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Corporate Match</fullName>
                </value>
                <value>
                    <fullName>Earned Income - IAVA Program</fullName>
                </value>
                <value>
                    <fullName>Earned Income - Merchandise</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Employee and Federated Giving - CFC</fullName>
                </value>
                <value>
                    <fullName>Employee and Federated Giving - Employee Giving</fullName>
                </value>
                <value>
                    <fullName>Employee and Federated Giving - United Way, et al.</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Events - Content</fullName>
                </value>
                <value>
                    <fullName>Events - Cultivation</fullName>
                </value>
                <value>
                    <fullName>Events - Gala</fullName>
                </value>
                <value>
                    <fullName>General Operating</fullName>
                </value>
                <value>
                    <fullName>General Support</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Grassroots Direct Response</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>In-kind - Goods</fullName>
                </value>
                <value>
                    <fullName>In-kind - Services</fullName>
                </value>
                <value>
                    <fullName>Major Gifts</fullName>
                </value>
                <value>
                    <fullName>Matching Gifts</fullName>
                </value>
                <value>
                    <fullName>Planned Giving</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Special Events</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_TY_Message__c</fullName>
        <description>Donation Thank You Message from campaign, which was added to TY email if campaign was selected at time of donation.</description>
        <formula>Campaign.Donation_TY_Message__c</formula>
        <inlineHelpText>Donation Thank You Message from campaign, which was added to TY email if campaign was selected at time of donation.</inlineHelpText>
        <label>Campaign Thank You Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Classy_Full_Campaign_Name__c</fullName>
        <formula>IF(Campaign.RecordType.Name = &apos;Classy&apos;,
    IF(Campaign.Parent.ParentId != null,
        Campaign.Parent.Parent.Name &amp; &apos; - &apos; &amp; Campaign.Parent.Name &amp; &apos; - &apos; &amp; Campaign.Name,
        IF(Campaign.ParentId != null,
            Campaign.Parent.Name &amp; &apos; - &apos; &amp; Campaign.Name,
            Campaign.Name)),
    null
)</formula>
        <label>Classy Full Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_Checkout_Page__c</fullName>
        <description>Checkout Page field from the attached CnP Transaction record.</description>
        <formula>CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__CheckOutPage__c</formula>
        <label>CnP Checkout Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__C_P_Recurring_Reference_Number__c</fullName>
        <label>C&amp;P Recurring Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__C_P_Recurring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Recurring ID</label>
        <referenceTo>CnP_PaaS__CnPRecurring__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Class</label>
        <referenceTo>CnP_PaaS__Class__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
        <label>C&amp;P Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Fundraiser_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Fundraiser Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (C&amp;P Fundraiser Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Item_ID__c</fullName>
        <label>C&amp;P Item ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Opportunity_Type__c</fullName>
        <label>C&amp;P Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Convenience Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_OrderNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Order Number</label>
        <referenceTo>CnP_PaaS__CnP_Transaction__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Type__c</fullName>
        <label>C&amp;P Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Recurring_Installment_Number__c</fullName>
        <label>C&amp;P Recurring Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>C&amp;P Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Coupon_Code__c</fullName>
        <label>C&amp;P Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Discount__c</fullName>
        <label>C&amp;P Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Invoice</label>
        <referenceTo>CnP_PaaS__Invoice__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P GL Account Number</label>
        <referenceTo>CnP_PaaS__Ledger__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Opportunity_Amount_Type__c</fullName>
        <label>Opportunity Amount Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__OrderNumber__c</fullName>
        <label>Deprecated Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__ReceiptNumber__c</fullName>
        <label>C&amp;P Receipt Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__ReferenceID_GUID__c</fullName>
        <label>C&amp;P Payment ReferenceID/GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SKU__c</fullName>
        <label>C&amp;P SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Sub_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Sub Class</label>
        <referenceTo>CnP_PaaS__Sub_Class__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tax__c</fullName>
        <label>C&amp;P Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tax_deductible__c</fullName>
        <label>C&amp;P Tax Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tracker__c</fullName>
        <label>Tracker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_URLReferrer__c</fullName>
        <description>URL Referrer from the CnP Transaction record (added 12/2012 but unused at this point since field updates can&apos;t be made from formula fields).</description>
        <formula>CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__UrlReferrer__c</formula>
        <label>CnP URLReferrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Donor_Snapshot__c</fullName>
        <description>Name and Relationship of person given co-donor credit by donor at time of donation.</description>
        <inlineHelpText>Name and Relationship of person given co-donor credit by donor at time of donation.</inlineHelpText>
        <label>Co-Donor Snapshot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coding_Approval_Date__c</fullName>
        <label>Coding Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coding_Status__c</fullName>
        <label>Coding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected with conditions</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>Text(CASE(VALUE(MID(TEXT( CreatedDate ) , 12, 2)) , 0, 7, 1, 8, 2, 9,3, 10,4, 11,5, 12,6, 1,7, 2,8, 3,9, 4,10, 5,11, 6,12, 7,13, 8,14,9,15, 10,16, 11,17, 12,18, 1,19, 2,20, 3,21, 4,22, 5,23, 6, 24))  
&amp; &quot;:&quot; &amp; MID(TEXT( CreatedDate ) , 15, 2)   
&amp; IF(AND(VALUE(MID(TEXT( CreatedDate ) , 12, 2)) &gt;= 5, VALUE(MID(TEXT( CreatedDate ) , 12, 2)) &lt;= 16), &quot; AM&quot;, &quot; PM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DIA_ID__c</fullName>
        <description>External Id reference to the donation &quot;key&quot; field in DIA</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id reference to the donation &quot;key&quot; field in DIA</inlineHelpText>
        <label>DIA  ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIA_Order_Info__c</fullName>
        <inlineHelpText>DIA Storefront Order Information.  Populated automatically by the DIA Integration.</inlineHelpText>
        <label>DIA Order Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIA_Recurring_Donation__c</fullName>
        <inlineHelpText>Recurring Donation Key value coming from DIA to link the donation to a Recurring Donation</inlineHelpText>
        <label>DIA Recurring Donation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIA_Status__c</fullName>
        <inlineHelpText>The Donation status as reported by DIA, before translation.</inlineHelpText>
        <label>DIA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIA_Transaction_Type__c</fullName>
        <label>DIA Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Last_Rated__c</fullName>
        <description>Date Stage and Gift Amount were last evaluated / confirmed</description>
        <inlineHelpText>Date Stage and Gift Amount were last evaluated / confirmed</inlineHelpText>
        <label>Date Last Rated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_mail_thank_you_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct mail thank you sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Link__c</fullName>
        <label>Donation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Donation_Month__c</fullName>
        <formula>MONTH( CloseDate )</formula>
        <label>Donation Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donor_Email__c</fullName>
        <formula>Account.npe01__One2OneContact__r.Email</formula>
        <label>Donor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <label>Donor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ticket</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Ad Purchase</fullName>
                </value>
                <value>
                    <fullName>Auction</fullName>
                </value>
                <value>
                    <fullName>In-Kind</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the executive who is overseeing this opportunity or stewarding the key relationships. They will be informed when the stage changes.</description>
        <inlineHelpText>This is the executive who is overseeing this opportunity or stewarding the key relationships. They will be informed when the stage changes.</inlineHelpText>
        <label>Executive Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_CnP_Recurring_Series__c</fullName>
        <description>If this donation is related to a CnP recurring transaction, this field should equal &quot;True&quot;.  Otherwise &quot;False&quot;.</description>
        <formula>if(CnP_PaaS__CnP_OrderNumber__r.Num_Recurrings__c &gt;0, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this donation is related to a CnP recurring transaction, this field should equal &quot;True&quot;.  Otherwise &quot;False&quot;.</inlineHelpText>
        <label>From CnP Recurring Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Recurring_Series__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked if the donation came from a recurring series, either in CnP or Paypal/DIA.</description>
        <inlineHelpText>Should be checked if the donation came from a recurring series, either in CnP or Paypal/DIA.</inlineHelpText>
        <label>From Recurring Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Location</label>
        <referenceTo>Geo_Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving_Code__c</fullName>
        <formula>TEXT(Type) &amp;&quot; &quot;&amp; TEXT(Campaign_Category__c)</formula>
        <label>Giving Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_End_Date__c</fullName>
        <description>end date of a grant</description>
        <inlineHelpText>end date of a grant</inlineHelpText>
        <label>Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Start_Date__c</fullName>
        <description>start date of a grant</description>
        <inlineHelpText>start date of a grant</inlineHelpText>
        <label>Grant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <description>Used to keep unique key from spreadsheet imports. Can be deleted if not needed anymore.</description>
        <inlineHelpText>Used to keep unique key from spreadsheet imports. Can be deleted if not needed anymore.</inlineHelpText>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Honor_Address__c</fullName>
        <inlineHelpText>255 char max</inlineHelpText>
        <label>In Honor Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Honor_Email__c</fullName>
        <label>In Honor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>In_Honor_Name__c</fullName>
        <label>In Honor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Honor_Of_Gift_Details__c</fullName>
        <label>In Honor Of/Gift Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Memory_Name__c</fullName>
        <label>In Memory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Projection_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Projection Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_First_Donation__c</fullName>
        <formula>IF( (Account.npe01__LifetimeDonationHistory_Number__c = 1), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is First Donation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Restricted_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this for line item restricted grants</inlineHelpText>
        <label>Line Item Restricted Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Clean_City__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Country__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_County__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_District__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Postal_Code__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_State__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Street__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Latitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Longitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Quality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MA_Similarity_Level__c</fullName>
        <label>Similarity Level (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>EOY16_2</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>EOY16_4</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Individual</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Individual Donation</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rob</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Unsolicited</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>c3</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>for all those who still struggle everyday.</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>